--- a/users-crud/package.json
+++ b/users-crud/package.json
@@ -24,45 +24,46 @@
   "author": "Daniel Ventura",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "env-var": "^7.0.1",
-    "express": "^4.17.1",
-    "helmet": "^3.21.2",
+    "body-parser": "^1.19.1",
+    "dotenv": "^16.0.0",
+    "env-var": "^7.1.1",
+    "express": "^4.17.2",
+    "helmet": "^5.0.2",
     "http": "0.0.1-security",
-    "joi": "^17.4.0",
+    "jayson": "^3.6.6",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.7",
+    "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
-    "passport": "^0.4.1",
+    "passport": "^0.5.2",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
-    "@types/helmet": "0.0.45",
+    "@types/express": "^4.17.13",
+    "@types/helmet": "0.0.48",
     "@types/jest": "^27.4.0",
-    "@types/jsonwebtoken": "^8.3.8",
-    "@types/mongoose": "^5.7.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^16.0.0",
-    "@types/passport": "^1.0.3",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
+    "@types/node": "^17.0.17",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^27.4.7",
-    "nodemon": "^2.0.2",
-    "nyc": "^15.0.0",
-    "prettier": "^1.19.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "nyc": "^15.1.0",
+    "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
-    "supertest": "^4.0.2",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.9.9"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
