fix and feat: fixed namings and fixed docker compose

--- a/subTasks-crud/docker-compose.yml
+++ b/subTasks-crud/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3"
 services:
-  users-service:
+  subtasks-service:
     build: ./
     environment: 
         DB_CONNECTION_URL: mongodb://mongo:27017
-        APPLICATION_PORT: 3001
+        APPLICATION_PORT: 3002
     ports:
-      - "3001:3001"
+      - "3002:3002"
     depends_on: 
       - mongo
   mongo:
