--- a/subTasks-crud/package.json
+++ b/subTasks-crud/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "users-service",
+  "name": "subTasks-service",
   "version": "0.0.7",
-  "description": "Users Service",
+  "description": "subTasks Service",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/yesodot/selenium/blueomek/users-service.git"
+    "url": "https://gitlab.com/yesodot/selenium/blueomek/subTasks-service.git"
   },
   "author": "Daniel Ventura",
   "license": "ISC",
@@ -32,6 +32,8 @@
     "http": "0.0.1-security",
     "jayson": "^3.6.6",
     "joi": "^17.6.0",
+    "joi-objectid": "^4.0.2",
+    "joi-oid": "^1.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
