--- a/compositor/package.json
+++ b/compositor/package.json
@@ -25,6 +25,7 @@
     "license": "ISC",
     "dependencies": {
         "@hapi/joi": "^17.1.1",
+        "axios": "^0.26.0",
         "body-parser": "^1.19.1",
         "dotenv": "^16.0.0",
         "env-var": "^7.1.1",
